--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,4 +2,11 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
+    height: 100vh;
+    
+    main{
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
 }
