--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -1,3 +1,19 @@
 #screen{
+    background: #323232;
+    color: #fff;
 
+    display: flex;
+    align-items: center;
+    flex:1;
+    justify-content: center;
+
+    padding: 20px 50px;
+
+    max-width: 100vw;
+
+    p{
+        word-break: break-all;
+        font-weight: bold;
+        font-size: 64px;
+    }
 }
