--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -4,8 +4,8 @@
 
     display: flex;
     align-items: center;
-    flex:1;
     justify-content: center;
+    flex: 1;
 
     padding: 20px 50px;
 
@@ -14,6 +14,6 @@
     p{
         word-break: break-all;
         font-weight: bold;
-        font-size: 64px;
+        font-size: 15vw;
     }
 }
