--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,12 +1,6 @@
 #home{
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    max-width: 600px;
     height: 100vh;
-    
-    main{
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-    }
 }
