--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -2,7 +2,7 @@ nav{
     padding: 10px;
     background: #323232;
     border-bottom: 1px solid #3a3a3a;
-    
+    align-self: stretch;
     .container{
         margin: 0 auto;
         display: flex;
