scroll button style

--- a/src/styles/scrollScreenButton.scss
+++ b/src/styles/scrollScreenButton.scss
@@ -1,3 +1,11 @@
 .scroll-screen-button{
+    height: 50px;
+
+    background: #313131;
     
+    border: none;
+
+    img{
+        height: 15px;
+    }
 }
