--- a/src/styles/historySection.scss
+++ b/src/styles/historySection.scss
@@ -1,3 +1,19 @@
 #history-section{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
     
+    width: 100vw;
+
+    h3{
+        text-align: center;
+        font-size: 40px;
+        font-weight: normal;
+
+        color: #fff;
+
+        padding: 10px 0;
+
+        border-bottom: 1px solid #616161;
+    }
 }
