history section style

--- a/src/styles/historyCard.scss
+++ b/src/styles/historyCard.scss
@@ -1,4 +1,21 @@
 .history-card{
     height: 78px;
     border-bottom: 1px solid #616161;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    padding: 10px 0;
+
+    .operation{
+        font-size: 17px;
+        color: #616161;
+    }
+
+    .result{
+        font-size: 30px;
+        color: #8746ff;
+    }
 }
