--- a/src/styles/historySection.scss
+++ b/src/styles/historySection.scss
@@ -1,11 +1,30 @@
 #history-section{
+    background: #2b2b2b;
+
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    
+        
     width: 100vw;
     height: 95vh;
+    top:0;
+    left: -500px;
+    
+    transition: left 0.2s ease-in-out;
 
+    &.visible{
+        left: 0px;
+    }
+
+    #close-icon{
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        right: 20px;
+        top: 20px;
+    }
+    
     h3{
         text-align: center;
         font-size: 40px;
