--- a/src/styles/calculatorSection.scss
+++ b/src/styles/calculatorSection.scss
@@ -1,6 +1,14 @@
 #calculator-section{
-    flex: 1;
+    height: 100%;
     display: flex;
+    flex: 1;
     flex-direction: column;
-    max-width: 400px;
+    align-self: stretch
+    
+}
+
+@media(min-width: 769px){
+    #calculator-section{
+        max-width: 400px;
+    }
 }
