--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,25 +1,22 @@
-.main-container{
-
-    max-width: 1120px;
+main{
+    height: 85vh;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 
-    #home{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    .container{
         flex: 1;
-        
-        main{
-            height: 85vh;
-            align-self: stretch;
-            display: flex;
-            flex-direction: column;
-        }
+        display: flex;
+        justify-content: center;
+        max-width: 1120px;
+        flex-direction: column;
+    }
+}
 
-        aside{
-            flex: 1;
+@media(min-width: 769px){
+    main{
+        .container{
+            flex-direction: row;
+            gap:10px;
         }
-
     }
 }
