--- a/src/styles/historyCard.scss
+++ b/src/styles/historyCard.scss
@@ -22,6 +22,19 @@
 
 @media(min-width: 769px){
     .history-card{
+
+        width: 150px;
+
+        text-align: center;
+
         border: 0;
+
+        .operation{
+            font-size: 14px;
+        }
+
+        .result{
+            font-size: 20px;
+        }
     }
 }
