--- a/src/styles/historySection.scss
+++ b/src/styles/historySection.scss
@@ -50,6 +50,9 @@
         width: 200px;
         height: 100%;
 
+        overflow-y: auto;
+        overflow-x: hidden;
+
         padding: 20px 150px;
 
 
