custom scrollbar style

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,3 +7,28 @@
 body{
     background: #323232;
 }
+
+//custom scrollbar
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #3c3c3c;
+    transition: border-radius 0.2s ease-in-out;
+    border-radius: 100px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #6900e2;
+    border-radius: 0px;
+}
