--- a/src/styles/historySection.scss
+++ b/src/styles/historySection.scss
@@ -1,4 +1,7 @@
 #history-section{
+
+    overflow-x: hidden;
+
     background: #2b2b2b;
 
     position: absolute;
@@ -26,6 +29,8 @@
     }
     
     h3{
+        background: #2b2b2b;
+        width: 100vw;
         text-align: center;
         font-size: 40px;
         font-weight: normal;
