--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -34,7 +34,7 @@
             -ms-user-select: none;
             user-select: none;
 
-            width: 80px;
+            min-width: 80px;
             
             display: flex;
             justify-content: center;
