--- a/src/styles/historySection.scss
+++ b/src/styles/historySection.scss
@@ -14,6 +14,8 @@
     top:0;
     left: -100vw;
     
+    visibility: hidden;
+
     transition: left 0.2s ease-in-out;
 
     &.visible{
@@ -62,6 +64,7 @@
 
         margin: 20px 0px;
 
+        visibility: visible;
 
         h3{
             border: 0;
