--- a/src/styles/calculatorSection.scss
+++ b/src/styles/calculatorSection.scss
@@ -3,8 +3,8 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    align-self: stretch
-    
+    align-self: stretch;
+   
 }
 
 @media(min-width: 769px){
