--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -22,7 +22,6 @@
 
     .text-container{
         width: 90vw;
-        height: 100%;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -37,9 +36,6 @@
             -webkit-user-select: none;
             -ms-user-select: none;
             user-select: none;
-
-            height: 80px;
-            min-width: 80px;
             
             display: flex;
             justify-content: center;
@@ -66,6 +62,8 @@
         display: flex;
 
         .text-container{
+            width: 400px;
+
             display: flex;
             align-items: center;
 
